MDEV-18266 Changing an index comment unnecessarily rebuilds index

ALTER_CHANGE_INDEX_COMMENT: new handler flag added

Compare_keys::EqualButComment: new outcome of compare_keys_but_name()