sql/lex_string.h
@@ -37,6 +37,10 @@ static inline bool cmp(const LEX_CSTRING *a, const LEX_CSTRING *b)
   return (a->length != b->length ||
           memcmp(a->str, b->str, a->length));
 }
+static inline bool cmp(const LEX_CSTRING a, const LEX_CSTRING b)
+{
+  return a.length != b.length || memcmp(a.str, b.str, a.length);
+}
 
 /*
   Compare if two LEX_CSTRING are equal. Assumption is that
